All_Component_DX/force-app/main/default/objects/Allocated_Stock__c/Allocated_Stock__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Allocated Stock details are captured in this object.</description>
    <label>Allocated Stock</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocated Stocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>