All_Component_DX/force-app/main/default/objects/Allocated_Stock__c/fields/Allocated_Qty__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Qty__c</fullName>
    <label>Allocated Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>