All_Component_DX/force-app/main/default/objects/Allocated_Stock__c/fields/Pending_Qty__c.field-meta.xml
<CustomField>
    <fullName>Pending_Qty__c</fullName>
    <formula>IF( Allocated_Qty__c  -  Shipped_Qty__c  &gt; 0, Allocated_Qty__c  -  Shipped_Qty__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>