All_Component_DX/force-app/main/default/objects/Allocated_Stock__c/fields/Product_Stock__c.field-meta.xml
<CustomField>
    <fullName>Product_Stock__c</fullName>
    <label>Product Stock</label>
    <referenceTo>Product_Stock__c</referenceTo>
    <relationshipLabel>Allocated Stocks</relationshipLabel>
    <relationshipName>Allocated_Stocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>