All_Component_DX/force-app/main/default/objects/Allocated_Stock__c/fields/Shipment_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipment Order Line</label>
    <referenceTo>RMA_Shipment_Line__c</referenceTo>
    <relationshipLabel>Allocated Stocks</relationshipLabel>
    <relationshipName>Shipment_Order_Line</relationshipName>
    <type>Lookup</type>
</CustomField>